[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/ui/tooltip.png" type="Texture" id=1]
[ext_resource path="res://ui/Tooltip.gd" type="Script" id=2]

[node name="Tooltip" type="Popup"]
visible = true
margin_right = 128.0
margin_bottom = 125.0
rect_min_size = Vector2( 128, 125 )
mouse_filter = 2
script = ExtResource( 2 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -65.0
margin_top = -126.0
margin_right = -65.0
margin_bottom = -136.0
rect_min_size = Vector2( 128, 115 )
mouse_filter = 2
texture = ExtResource( 1 )
expand = true

[node name="MarginContainer" type="MarginContainer" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = 33.0
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Background/MarginContainer"]
margin_right = 127.0
margin_bottom = 143.0
mouse_filter = 2

[node name="SkillName" type="Label" parent="Background/MarginContainer/VBoxContainer"]
margin_right = 127.0
margin_bottom = 14.0
text = "<SkillName>"
align = 1

[node name="SkillType" type="Label" parent="Background/MarginContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 127.0
margin_bottom = 32.0
text = "<SkillType>"
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Background/MarginContainer/VBoxContainer"]
margin_top = 36.0
margin_right = 127.0
margin_bottom = 50.0
mouse_filter = 2

[node name="DamageOrHeal" type="Label" parent="Background/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 56.0
margin_bottom = 14.0
text = "Damage:"
valign = 1

[node name="DamageHealAmount" type="Label" parent="Background/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 60.0
margin_right = 127.0
margin_bottom = 14.0
text = "<Amount>"
valign = 1

[node name="SkillDescription" type="Label" parent="Background/MarginContainer/VBoxContainer"]
margin_top = 54.0
margin_right = 127.0
margin_bottom = 85.0
text = "Lorem ipsum dolor sit amet..."
autowrap = true
